# tsu_analyzer

./: .gitignore  README.md  broadcast_hotlapping_times.py  driver.csv  logfile.txt  pyproject.toml  results.csv  run.py  track.csv
alembic/: env.py
examples/: 20240323_181826_LagunaSecaRacewayv1.02.json  20240323_234957_Interlagosv6.json  20240406_212628_MacauGPv1.0.json  20240816_194720_ZandvoortGPv2.04_event.json  20240816_201039_ZandvoortGPv2.04_event.json  20240905_181702_RallyRaiskumsLatviaV1.02_event.json  20240905_181702_RallyRaiskumsLatviaV1.02_session.json  20240905_181824_RallyRaiskumsLatviaV1.02_event.json  eventstats_laguna.json  eventstats_laguna2.json  eventstats_ovalmania.json  stage.json
result_files_for_elo/: 20231115 TSU Invitational.json  20231125 1st Endurance on Lausitzring.json  20231221 Xmas Cup Division 1.json  20240117 Porsche Cup Oschersleben.json  20240302 Grand Prix of Legends.json  20240312_GrT_Season01_Round01_Race1_WatkinsGlen.json  20240326_GrT_Season01_Round02_Race1_Interlagos.json  20240409_GrT_Season01_Round03_Race1_Zolder.json  20240423_GrT_Season01_Round04_Race1_Hockenheim.json  20240507_GrT_Season01_Round05_Race1_Lausitzring.json  20240511 GP Shanghai.json  20240521_GrT_Season01_Round06_Race1_Imola.json  20240604_GrT_Season01_Round07_Race1_Phillip_Island.json  20240618_GrT_Season01_Round08_Race1_Mount_Panorama.json  20241012 GP Texas.json  20241015_GrT_Season02_Round01_Race1_Owl_Forest.json  20241026 Porsche Cup - Lotta Sisu.json  20241029_GrT_race1.json  20241112_210212_RoadAmericaV2.0_event.json  20241126_grt_zandvoort.json  (+6 more)
(+33 files in other folders)
